syntax = "proto3";

package proto;

option go_package = "github.com/akamiya208/go-grpc-tutrial/internal/pkg/proto";

message GetTaskRequest { uint32 id = 1; }

message GetTasksRequest { string name = 1; }

message CreateTaskRequest {
  string name = 1;
  string description = 2;
}

message UpdateTaskRequest {
  uint32 id = 1;
  string name = 2;
  string description = 3;
}

message DeleteTaskRequest { uint32 id = 1; }

message TaskResponse {
  uint32 id = 1;
  string name = 2;
  string description = 3;
}

message TaskResponses { repeated TaskResponse tasks = 1; }

// サービス定義
service TaskService {
  rpc GetTask(GetTaskRequest) returns (TaskResponse);
  rpc GetTasks(GetTasksRequest) returns (TaskResponses);
  rpc CreateTask(CreateTaskRequest) returns (TaskResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (TaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (TaskResponse);
}